# datareader

./: SplineGoDash.py  SplineGoDashOnePlot.py  chartmaker.py  charttest.py  main.cpp
Base/: CMakeLists.txt  Candle.cpp  Candle.h  CandleMaker.cpp  CandleMaker.h  CandleMakerEx.cpp  CandleMakerEx.h  IAdapterIn.h  IAdapterOut.h  NamedParams.h  NamedParamsReader.cpp  NamedParamsReader.h  Position.cpp  Position.h  PriceInfo.cpp  PriceInfo.h  Product.cpp  Product.h  SymbolInfo.h  Utilities.cpp  Utilities.h  decimal.h
Common/: CMakeLists.txt  Factory.cpp  Instrument.cpp  Instrument.h  Marketable.cpp  Marketable.h  Strategy.cpp  Strategy.h  StrategyA.cpp  StrategyA.h  Synthetic.cpp  Synthetic.h  Trader.cpp  Trader.h
Examples/: AdapterIn.cpp  AdapterIn.h  AutomatChanelCombo.py  AutomatChanelProd.py  Bhaskar Process.xlsx  Bhaskar.cpp  Enum.cpp  Enum.h  Examples.7z  Multiplexer.txt  MultiplexerComboEx.txt  Optimizer.py  cdemo  main.cpp  pythonsample  top.cpp  top.h
Graph/: FuturesData.py  GraphQuickStart.py  PenalizedSpline312.cpp  RunAlphaList.py  main.py
Risk/: BH-RiskReport.py  VarAnalysis.py  returnseries.csv
Risk/20230522-174834/: returnseries.csv  returnseriesT.csv
Sample/: text.7z
Simulator/: Candle.cpp  CandleMaker.cpp  CandleMaker.h  CandleMakerEx.cpp  CandleMakerEx.h  IAdapterIn.h  Simulator.cpp  Simulator.h  Trader.cpp  Trader.h  Utilities.cpp  Utilities.h
